# Projet_Apprentissage

./: Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
projet_aa/src/: clustering.py  cross_validation.py  main.py  models_dt.py  models_rf.py  preprocessing.py  visualisation.py
tests/: test_clustering.py  test_models.py  test_preprocessing.py
