[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "projet_aa"
version = "0.0.1"
description = "Analyser le jeu de données pour établir la corrélation entre les habitudes de vie (alimentation et activité physique) et le niveau d'obésité des individus."
authors = [
  { name = "Yannick JIN \u0026 Vincent BERNIER" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.11"


[tool.ruff]
line-length = 99
src = ["projet_aa"]
include = ["pyproject.toml", "projet_aa/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["projet_aa"]
force-sort-within-sections = true
